--- a/Audio_Test/nbproject/project.properties
+++ b/Audio_Test/nbproject/project.properties
@@ -28,10 +28,12 @@ dist.jar=${dist.dir}/Audio_Test.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.jmf.jar=/Library/Java/Extensions/jmf.jar
+file.reference.jmf.jar-1=C:\\Users\\Eva\\Documents\\Htl leonding\\SYP\\jmf.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.jmf.jar}
+    ${file.reference.jmf.jar}:\
+    ${file.reference.jmf.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
