--- a/Audio_Test/nbproject/private/private.properties
+++ b/Audio_Test/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=/Users/Mike/Library/Application Support/NetBeans/8.1/build.properties
+user.properties.file=C:\\Users\\Eva\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
