Upload project which should run

--- a/Audio_Test/nbproject/project.properties
+++ b/Audio_Test/nbproject/project.properties
@@ -28,10 +28,14 @@ dist.jar=${dist.dir}/Audio_Test.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.jmf.jar=/Library/Java/Extensions/jmf.jar
+file.reference.vlcj-3.10.1-tests.jar=/Users/Mike/Schule/SYP/vlcj-3.10.1/vlcj-3.10.1-tests.jar
+file.reference.vlcj-3.10.1.jar=/Users/Mike/Schule/SYP/vlcj-3.10.1/vlcj-3.10.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.jmf.jar}
+    ${file.reference.jmf.jar}:\
+    ${file.reference.vlcj-3.10.1.jar}:\
+    ${file.reference.vlcj-3.10.1-tests.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
