--- a/Audio_Test/nbproject/project.properties
+++ b/Audio_Test/nbproject/project.properties
@@ -29,13 +29,17 @@ dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.jmf.jar=/Library/Java/Extensions/jmf.jar
 file.reference.vlcj-3.10.1-tests.jar=/Users/Mike/Schule/SYP/vlcj-3.10.1/vlcj-3.10.1-tests.jar
+file.reference.vlcj-3.10.1-tests.jar-1=dist/lib/vlcj-3.10.1-tests.jar
 file.reference.vlcj-3.10.1.jar=/Users/Mike/Schule/SYP/vlcj-3.10.1/vlcj-3.10.1.jar
+file.reference.vlcj-3.10.1.jar-1=dist/lib/vlcj-3.10.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.jmf.jar}:\
     ${file.reference.vlcj-3.10.1.jar}:\
-    ${file.reference.vlcj-3.10.1-tests.jar}
+    ${file.reference.vlcj-3.10.1-tests.jar}:\
+    ${file.reference.vlcj-3.10.1-tests.jar-1}:\
+    ${file.reference.vlcj-3.10.1.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
